tests/baselines/reference/typeCheckTypeArgument.errors.txt
tests/cases/compiler/typeCheckTypeArgument.ts(1,19): error TS2304: Cannot find name 'UNKNOWN'.
tests/cases/compiler/typeCheckTypeArgument.ts(3,26): error TS2304: Cannot find name 'UNKNOWN'.
tests/cases/compiler/typeCheckTypeArgument.ts(5,21): error TS2304: Cannot find name 'UNKNOWN'.
tests/cases/compiler/typeCheckTypeArgument.ts(7,24): error TS2304: Cannot find name 'UNKNOWN'.
tests/cases/compiler/typeCheckTypeArgument.ts(10,22): error TS2304: Cannot find name 'UNKNOWN'.
tests/cases/compiler/typeCheckTypeArgument.ts(13,13): error TS2304: Cannot find name 'UNKNOWN'.


==== tests/cases/compiler/typeCheckTypeArgument.ts (6 errors) ====
    var f: <T extends UNKNOWN>() => void;
                      ~~~~~~~
!!! error TS2304: Cannot find name 'UNKNOWN'.
    
    interface IFoo<T extends UNKNOWN> { }
                             ~~~~~~~
!!! error TS2304: Cannot find name 'UNKNOWN'.
    
    class Foo<T extends UNKNOWN> { }
                        ~~~~~~~
!!! error TS2304: Cannot find name 'UNKNOWN'.
    
    function bar<T extends UNKNOWN>() { }
                           ~~~~~~~
!!! error TS2304: Cannot find name 'UNKNOWN'.
    
    class Foo2 {
        method<T extends UNKNOWN>() { }
                         ~~~~~~~
!!! error TS2304: Cannot find name 'UNKNOWN'.
    }
    
    (<T extends UNKNOWN>(a) => { });
                ~~~~~~~
!!! error TS2304: Cannot find name 'UNKNOWN'.